# ticket-automation

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/: __init__.py  classifier.py  config.py  data_sources.py  email_sender.py  excel_generator.py  main.py  models.py
tests/: __init__.py  test_classifier.py  test_config.py  test_data_sources.py  test_email_sender.py  test_excel_generator.py  test_models.py
